--- a/factsheet.html
+++ b/factsheet.html
@@ -46,7 +46,7 @@
                 <h3>Factsheets</h3>
                 <p>Please find below a selection of fact sheets that you may find useful. For more information, complete the enquiry form.</p>
                 <p align="left" class="body_text"><img src="imgs/right-arrow-double-3.gif" width="16" height="16" alt="Free factsheets"> <a href="factsheets/BusinessStructures.pdf" target="_blank">Business Structures</a><br>
-                  <img src="imgs/right-arrow-double-3.gif" width="16" height="16" alt="Free factsheets"> <a href="factsheets/CIS.pdf" target="_blank">Construction Scheme Industry</a><br>
+                  <img src="imgs/right-arrow-double-3.gif" width="16" height="16" alt="Free factsheets"> <a href="factsheets/CIS.pdf" target="_blank">Construction Industry Scheme </a><br>
                   <img src="imgs/right-arrow-double-3.gif" width="16" height="16" alt="Free factsheets"> <a href="factsheets/CompanySecretary.pdf" target="_blank">Company Secretary Responsibilities</a><br>
                   <img src="imgs/right-arrow-double-3.gif" width="16" height="16" alt="Free factsheets"> <a href="factsheets/DirectorsResponsibilities.pdf" target="_blank">Directors' Responsibilities</a><br>
                   <img src="imgs/right-arrow-double-3.gif" width="16" height="16" alt="Free factsheets"> <a href="factsheets/EmploymentBenefits.pdf" target="_blank">Employment Benefits</a><br>
@@ -127,7 +127,9 @@
 
 
      <footer>
-     <img class="acca" src="imgs/acca.gif" alt="ACCA" style="width: 128px ; height: 128px";>
+         <a href="https://www.accaglobal.com/">
+    <img class="acca" src="imgs/acca.gif" alt="ACCA" style="width: 128px; height: 128px;">
+        </a>
       <p>Peter Baldwin & Co, Copyright &copy; 2017 <br>Website design MedAppLive</p>
     </footer>
 
