--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang=en>
 
   <head>
     <meta charset="utf-8">
@@ -31,7 +31,7 @@
 
       <section id="newsletter">
         <div class="container">
-          <h1 id="header b">Contact us today: 01243 83 83 83 </h1>
+          <h1 style="text">Contact us today: 01243 83 83 83 </h1>
           
      <a href="mailto:peter@peterbaldwin.co.uk?Subject=Please contact me." target="_top"><button type="submit" class="button_1" style="margin: 15px 0px 0px 20px;">Email us</button></a>
         </div>
@@ -50,7 +50,11 @@
               </li>
               <li>
                 <h3> Association of Chartered Certified Accountants (ACCA)</h3>
-                <img class="acca" src="imgs/acca.gif" alt="ACCA" style="width: 128px ; height: 128px";>
+               <div>
+                       <a href="https://www.accaglobal.com/">
+    <img class="acca" src="imgs/acca.gif" alt="ACCA" style="width: 128px; height: 128px;">
+        </a>
+               </div>
                 <p>Founded in 1904, the Association of Chartered Certified Accountants is the global professional accounting body offering the Chartered Certified Accountant qualification. </p>
                 
               </li>
@@ -84,7 +88,9 @@
 
 
      <footer>
-     <img class="acca" src="imgs/acca.gif" alt="ACCA" style="width: 128px ; height: 128px;">
+         <a href="https://www.accaglobal.com/">
+    <img class="acca" src="imgs/acca.gif" alt="ACCA" style="width: 128px; height: 128px;">
+        </a>
       <p>Peter Baldwin & Co, Copyright &copy; 2017 <br>Website design MedAppLive</p>
     </footer>
 
