--- a/Contact.html
+++ b/Contact.html
@@ -32,9 +32,9 @@
       <section id="newsletter">
         <div class="container">
           <h2 style="hedingb">Contact us today: 01243 83 83 83 </h2>
-      <!--    
+        
      <a href="mailto:peter@peterbaldwin.co.uk?Subject=Please contact me." target="_top"></a>
-       <button type="submit" class="button_1" style="margin: 15px 0px 0px 20px;">Email us</button> -->
+       <button type="submit" class="button_1" style="margin: 15px 0px 0px 20px;">Email us</button> 
         </div>
       </section>
     <img src="imgs/Map.JPG" alt="Location map" style="width:59%;height:auto;">
