--- a/services.html
+++ b/services.html
@@ -12,6 +12,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <title> Peter Baldwin & Co | Services</title>
     <link rel="stylesheet" href="responsive_css.css">
+    <link rel="stylesheet" href="modal.css">
   </head>
     <body>
       <header>
@@ -35,8 +36,7 @@
         <div class="container">
           <h2 id="headerb">Contact us today: 01243 83 83 83 </h2>
           
-     <a href="mailto:peter@peterbaldwin.co.uk?Subject=Please_contact _me." target="_top"></a>
-       <button type="submit" class="button_1" style="margin: 15px 0px 0px 20px;">Email us</button>
+ 
         </div>
       </section>
   <div class="center">    
@@ -44,6 +44,156 @@
   <source src="imgs/An_Accounting_story.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
+  </div>
+
+<aside id="sidebar">
+    <div class="dark">
+    <!-- Trigger/Open The Modal -->
+    <button id="myBtn" class="button_1";>Email us</button>
+</div>
+<!-- The Modal -->
+
+<style>
+.modal {
+  display: none; /*  This makes the modal hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top of everything else */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 0;
+  border: 1px solid #888;
+  width: 80%;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+  -webkit-animation-name: animatetop;
+  -webkit-animation-duration: 0.4s;
+  animation-name: animatetop;
+  animation-duration: 0.4s
+}
+
+/* Add Animation */
+@-webkit-keyframes animatetop {
+  from {top:-300px; opacity:0} 
+  to {top:0; opacity:1}
+}
+
+@keyframes animatetop {
+  from {top:-300px; opacity:0}
+  to {top:0; opacity:1}
+}
+
+/* The Close Button */
+.close {
+  color: white;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-header {
+  padding: 2px 16px;
+  background-color: #33ccff;
+  color: white;
+}
+
+.modal-body {padding: 2px 16px;}
+
+.modal-footer {
+  padding: 2px 16px;
+  background-color: #33ccff;
+  color: white;
+text-align: center;
+}
+
+</style>
+
+<div id="myModal" class="modal">
+
+<!-- Modal content -->
+<div class="modal-content">
+  <div class="modal-header">
+    <span class="close">&times;</span>
+    <h2>Contact</h2>
+  </div>
+  <div class="modal-body">
+    <p><body>
+
+<h2>Send e-mail</h2>
+
+<form action="mailto:peter@peterbaldwin.co.uk?subject=Please%20contact%20me" method="post" enctype="text/plain">
+Name:<br>
+<input type="text" name="name"><br>
+E-mail:<br>
+<input type="text" name="mail"><br>
+Comment:<br>
+<input type="text" name="comment" size="50"><br><br>
+<input type="submit" value="Send">
+<input type="reset" value="Reset">
+</form>
+
+</body> </p>
+    <p></p>
+  </div>
+
+  <div class="modal-footer">
+    <h5>By using this form, you will agree to our Privacy Notice.</h5>
+    <img src="imgs/right-arrow-double-3.gif" width="16" height="16" alt="Privacy Notice"> <a href="factsheets/Peter%20Baldwin%20%20Co%20Privacy%20Notice%20180219.pdf
+    " target="_blank">Privacy Notice</a><br>
+  </div>
+</div>
+
+</div>
+
+<script>
+// Get the modal
+var modal = document.getElementById('myModal');
+
+// Get the button that opens the modal
+var btn = document.getElementById("myBtn");
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks the button, open the modal 
+btn.onclick = function() {
+  modal.style.display = "block";
+}
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+  modal.style.display = "none";
+}
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+  if (event.target == modal) {
+      modal.style.display = "none";
+  }
+}
+</script>
+  </div>
+  </aside>
+
+
  </div>
       <section id="main">
         <div class="container">
@@ -186,7 +336,11 @@
     <a href="https://www.accaglobal.com/">
     <img class="acca" src="imgs/acca.gif" alt="ACCA" style="width: 128px; height: 128px;">
         </a>
-      <p>Peter Baldwin & Co, Copyright &copy; 2017 <br>Website design MedAppLive</p>
+        <p>Peter Baldwin & Co, Copyright &copy; 2017 <br>
+          Unit J1, Durban Road, Bognor Regis, PO22 9QT
+          <br>Website design MedAppLive</p>
+      <img src="imgs/right-arrow-double-3.gif" width="16" height="16" alt="Privacy Notice"> <a href="factsheets/Peter%20Baldwin%20%20Co%20Privacy%20Notice%20180219.pdf
+      " target="_blank">Privacy Notice</a><br>
     </footer>
 
 
